--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#5C6BC0</color>
+    <color name="black">#000000</color>
+    <color name="white">#FFFFFF</color>
+    <color name="transparent">#00000000</color>
+    <color name="blue_white">#E3F2FD</color>
+    <color name="black_transparent">#55000000</color>
+
+
+    <color name="colorPrimary">#42A5F5</color>
     <color name="colorPrimaryDark">#3949AB</color>
-    <color name="colorAccent">#FFEBEE</color>
+    <color name="colorAccent">@color/black</color>
 </resources>
