--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,18 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="cardViewStyle">@style/CardStyle</item>
+        <item name="android:textViewStyle">@style/CardTextStyle</item>
+    </style>
+
+    <style name="CardStyle" parent="CardView.Light">
+        <item name="cardBackgroundColor">@color/white</item>
+    </style>
+    
+    <style name="CardTextStyle" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">16sp</item>
+<!--        <item name="fontFamily">sans-serif-condensed</item>-->
     </style>
 
 </resources>
