created 2 text styles

--- a/app/src/main/res/layout/recipe_card_view.xml
+++ b/app/src/main/res/layout/recipe_card_view.xml
@@ -54,7 +54,6 @@
                 android:layout_marginStart="8dp"
                 android:gravity="center_vertical"
                 android:text="@string/time"
-                android:textStyle="bold"
                 card_view:layout_constraintBottom_toBottomOf="parent"
                 card_view:layout_constraintHeight_percent="0.5"
                 card_view:layout_constraintStart_toStartOf="parent"
@@ -67,7 +66,7 @@
                 android:layout_marginStart="8dp"
                 android:gravity="center_vertical"
                 android:text="40 min"
-                android:textColor="@color/grey"
+                style="@style/SecondaryTextStyle"
                 card_view:layout_constraintHeight_percent="0.5"
                 card_view:layout_constraintStart_toEndOf="@+id/time_title"
                 card_view:layout_constraintTop_toTopOf="@+id/time_title" />
@@ -91,7 +90,7 @@
                 android:layout_marginStart="8dp"
                 android:gravity="center_vertical"
                 android:text="Easy"
-                android:textColor="@color/grey"
+                style="@style/SecondaryTextStyle"
                 card_view:layout_constraintHeight_percent="0.5"
                 card_view:layout_constraintStart_toEndOf="@+id/difficulty_title"
                 card_view:layout_constraintTop_toTopOf="@+id/difficulty_title" />
