--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,6 +8,7 @@
         <item name="colorAccent">@color/colorAccent</item>
         <item name="cardViewStyle">@style/CardStyle</item>
         <item name="android:textViewStyle">@style/MainTextStyle</item>
+        <item name="fontFamily">@font/my_font</item>
     </style>
 
     <style name="CardStyle" parent="CardView.Light">
@@ -18,7 +19,6 @@
         <item name="android:textColor">@color/black</item>
         <item name="android:textSize">16sp</item>
         <item name="android:textStyle">bold</item>
-<!--        <item name="fontFamily">sans-serif-condensed</item>-->
     </style>
 
     <style name="SecondaryTextStyle" parent="TextAppearance.AppCompat">
