--- a/app/src/main/res/layout/recipe_card_view.xml
+++ b/app/src/main/res/layout/recipe_card_view.xml
@@ -1,112 +1,119 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout>
+    <data>
+        <variable
+            name="recipe"
+            type="com.example.whatscooking.data.Recipe" />
+    </data>
 
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/recipe_card"
-    android:layout_width="match_parent"
-    android:layout_height="200dp"
-    android:layout_gravity="center"
-    android:layout_margin="8dp"
-    card_view:cardCornerRadius="4dp"
-    card_view:cardElevation="8dp">
-
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/recipe_card"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <ImageView
-            android:id="@+id/recipe_image"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:contentDescription="Recipe image"
-            android:scaleType="centerCrop"
-            android:src="@drawable/recipe_placeholder_image"
-            card_view:layout_constraintHeight_percent="0.8"
-            card_view:layout_constraintTop_toTopOf="parent"
-            card_view:srcCompat="@drawable/recipe_placeholder_image"
-            tools:layout_editor_absoluteX="0dp" />
-
-        <TextView
-            android:id="@+id/recipe_title"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:background="@color/black_transparent"
-            android:fontFamily="sans-serif-light"
-            android:paddingStart="8dp"
-            android:text="Recipe title"
-            android:textColor="@color/white"
-            android:textSize="32sp"
-            android:textStyle="bold"
-            card_view:layout_constraintBottom_toBottomOf="@id/recipe_image"/>
+        android:layout_height="200dp"
+        android:layout_gravity="center"
+        android:layout_margin="8dp"
+        card_view:cardCornerRadius="4dp"
+        card_view:cardElevation="8dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:background="@color/white"
-            card_view:layout_constraintHeight_percent="0.2"
-            card_view:layout_constraintTop_toBottomOf="@+id/recipe_image">
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:id="@+id/recipe_image"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:contentDescription="Recipe image"
+                android:scaleType="centerCrop"
+                android:src="@drawable/recipe_placeholder_image"
+                card_view:layout_constraintHeight_percent="0.8"
+                card_view:layout_constraintTop_toTopOf="parent"
+                card_view:srcCompat="@drawable/recipe_placeholder_image"
+                tools:layout_editor_absoluteX="0dp" />
 
             <TextView
-                android:id="@+id/time_title"
-                android:layout_width="wrap_content"
+                android:id="@+id/recipe_title"
+                android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_marginStart="8dp"
-                android:gravity="center_vertical"
-                android:text="@string/time"
-                card_view:layout_constraintBottom_toBottomOf="parent"
-                card_view:layout_constraintHeight_percent="0.5"
-                card_view:layout_constraintStart_toStartOf="parent"
-                card_view:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/time_value"
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_marginStart="8dp"
-                android:gravity="center_vertical"
-                android:text="40 min"
-                style="@style/SecondaryTextStyle"
-                card_view:layout_constraintHeight_percent="0.5"
-                card_view:layout_constraintStart_toEndOf="@+id/time_title"
-                card_view:layout_constraintTop_toTopOf="@+id/time_title" />
-
-            <TextView
-                android:id="@+id/difficulty_title"
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_marginStart="16dp"
-                android:gravity="center_vertical"
-                android:text="@string/difficulty"
+                android:background="@color/black_transparent"
+                android:fontFamily="sans-serif-light"
+                android:paddingStart="8dp"
+                android:text="@{recipe.title}"
+                android:textColor="@color/white"
+                android:textSize="32sp"
                 android:textStyle="bold"
-                card_view:layout_constraintHeight_percent="0.5"
-                card_view:layout_constraintStart_toEndOf="@+id/time_value"
-                card_view:layout_constraintTop_toTopOf="@+id/time_value" />
+                card_view:layout_constraintBottom_toBottomOf="@id/recipe_image"/>
 
-            <TextView
-                android:id="@+id/difficulty_value"
-                android:layout_width="wrap_content"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_marginStart="8dp"
-                android:gravity="center_vertical"
-                android:text="Easy"
-                style="@style/SecondaryTextStyle"
-                card_view:layout_constraintHeight_percent="0.5"
-                card_view:layout_constraintStart_toEndOf="@+id/difficulty_title"
-                card_view:layout_constraintTop_toTopOf="@+id/difficulty_title" />
+                android:background="@color/white"
+                card_view:layout_constraintHeight_percent="0.2"
+                card_view:layout_constraintTop_toBottomOf="@+id/recipe_image">
 
-            <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:src="@drawable/menu_down"
-                android:backgroundTint="@color/transparent"
-                card_view:layout_constraintBottom_toBottomOf="parent"
-                card_view:layout_constraintEnd_toEndOf="parent"
-                card_view:layout_constraintTop_toTopOf="parent" />
+                <TextView
+                    android:id="@+id/time_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    android:layout_marginStart="8dp"
+                    android:gravity="center_vertical"
+                    android:text="@string/time"
+                    card_view:layout_constraintBottom_toBottomOf="parent"
+                    card_view:layout_constraintHeight_percent="0.5"
+                    card_view:layout_constraintStart_toStartOf="parent"
+                    card_view:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/time_value"
+                    android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    android:layout_marginStart="8dp"
+                    android:gravity="center_vertical"
+                    android:text="@{recipe.timeInMinutes + ` ` + @string/min}"
+                    style="@style/SecondaryTextStyle"
+                    card_view:layout_constraintHeight_percent="0.5"
+                    card_view:layout_constraintStart_toEndOf="@+id/time_title"
+                    card_view:layout_constraintTop_toTopOf="@+id/time_title" />
+
+                <TextView
+                    android:id="@+id/difficulty_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    android:layout_marginStart="16dp"
+                    android:gravity="center_vertical"
+                    android:text="@string/difficulty"
+                    android:textStyle="bold"
+                    card_view:layout_constraintHeight_percent="0.5"
+                    card_view:layout_constraintStart_toEndOf="@+id/time_value"
+                    card_view:layout_constraintTop_toTopOf="@+id/time_value" />
+
+                <TextView
+                    android:id="@+id/difficulty_value"
+                    android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    android:layout_marginStart="8dp"
+                    android:gravity="center_vertical"
+                    android:text="@{String.valueOf(recipe.difficulty)}"
+                    style="@style/SecondaryTextStyle"
+                    card_view:layout_constraintHeight_percent="0.5"
+                    card_view:layout_constraintStart_toEndOf="@+id/difficulty_title"
+                    card_view:layout_constraintTop_toTopOf="@+id/difficulty_title" />
+
+                <ImageButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    android:src="@drawable/menu_down"
+                    android:backgroundTint="@color/transparent"
+                    card_view:layout_constraintBottom_toBottomOf="parent"
+                    card_view:layout_constraintEnd_toEndOf="parent"
+                    card_view:layout_constraintTop_toTopOf="parent" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
-
-</androidx.cardview.widget.CardView>
+    </androidx.cardview.widget.CardView>
+</layout>
