--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -4,8 +4,8 @@
 
     <data>
         <variable
-            name="viewModel"
-            type="com.example.whatscooking.viewmodels.RecipesListViewModel"/>
+            name="hasRecipes"
+            type="boolean"/>
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
