--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,9 +7,11 @@
     <color name="blue_white">#E3F2FD</color>
     <color name="black_transparent">#55000000</color>
     <color name="beige">#FFF8E1</color>
+    <color name="light_blue">#42A5F5</color>
+    <color name="dark_blue">#3949AB</color>
 
 
-    <color name="colorPrimary">#42A5F5</color>
-    <color name="colorPrimaryDark">#3949AB</color>
-    <color name="colorAccent">@color/black</color>
+    <color name="colorPrimary">@color/light_blue</color>
+    <color name="colorPrimaryDark">@color/dark_blue</color>
+    <color name="colorAccent">@color/white</color>
 </resources>
