--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -14,7 +14,7 @@
         android:id="@+id/main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.main.MainFragment"
+        tools:context=".main.recipelist.MainFragment"
         android:background="@color/white">
 
         <androidx.recyclerview.widget.RecyclerView
