--- a/app/src/main/res/layout/recipe_fragment.xml
+++ b/app/src/main/res/layout/recipe_fragment.xml
@@ -22,8 +22,10 @@
             android:id="@+id/recipe_scroll_view"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="@id/button"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHeight_percent="0.925"
+            app:layout_constraintHeight_percent="0.9"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -91,16 +93,16 @@
 
                         <TextView
                             android:id="@+id/time_title"
+                            style="@style/MainTextStyle"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            style="@style/MainTextStyle"
                             android:text="@string/time" />
 
                         <TextView
                             android:id="@+id/time_value"
+                            style="@style/SecondaryTextStyle"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            style="@style/SecondaryTextStyle"
                             android:layout_marginStart="8dp"
                             android:layout_marginEnd="8dp"
                             android:text="@{recipe.recipeInfo.timeMinutes + ` ` + @string/min}" />
@@ -120,16 +122,16 @@
 
                         <TextView
                             android:id="@+id/difficulty_title"
+                            style="@style/MainTextStyle"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            style="@style/MainTextStyle"
                             android:text="@string/difficulty" />
 
                         <TextView
                             android:id="@+id/difficulty_value"
+                            style="@style/SecondaryTextStyle"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            style="@style/SecondaryTextStyle"
                             android:layout_marginStart="8dp"
                             android:layout_marginEnd="8dp"
                             android:text="@{String.valueOf(recipe.recipeInfo.difficulty)}" />
@@ -148,26 +150,141 @@
 
                         <TextView
                             android:id="@+id/servings_title"
+                            style="@style/MainTextStyle"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            style="@style/MainTextStyle"
                             android:text="@string/servings" />
 
                         <TextView
                             android:id="@+id/recipe_servings"
+                            style="@style/SecondaryTextStyle"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            style="@style/SecondaryTextStyle"
-                            android:text="@{String.valueOf(recipe.recipeInfo.servings)}"
                             android:layout_marginStart="8dp"
-                            android:layout_marginEnd="8dp" />
+                            android:layout_marginEnd="8dp"
+                            android:text="@{String.valueOf(recipe.recipeInfo.servings)}" />
                     </LinearLayout>
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <!-- TODO add tags-->
+                <LinearLayout
+                    android:id="@+id/ingredients_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_horizontal"
+
+                    android:orientation="vertical"
+                    android:paddingStart="24dp"
+                    android:paddingTop="24dp"
+                    android:paddingEnd="24dp"
+                    android:paddingBottom="24dp">
 
 
+                    <CheckBox
+                        android:id="@+id/checkBox"
+                        style="@style/MainTextStyle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:buttonTint="@color/black"
+                        android:text="Lentils" />
+
+                    <CheckBox
+                        android:id="@+id/checkBox1"
+                        style="@style/MainTextStyle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:buttonTint="@color/black"
+                        android:text="Salt" />
+
+                    <CheckBox
+                        android:id="@+id/checkBox2"
+                        style="@style/MainTextStyle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:buttonTint="@color/black"
+                        android:text="Bayleaf" />
+
+                    <CheckBox
+                        android:id="@+id/checkBox3"
+                        style="@style/MainTextStyle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:buttonTint="@color/black"
+                        android:text="Bayleaf" />
+
+                    <CheckBox
+                        android:id="@+id/checkBox4"
+                        style="@style/MainTextStyle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:buttonTint="@color/black"
+                        android:text="Bayleaf" />
+
+                    <CheckBox
+                        android:id="@+id/checkBox5"
+                        style="@style/MainTextStyle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:buttonTint="@color/black"
+                        android:text="Bayleaf" />
+
+                    <CheckBox
+                        android:id="@+id/checkBox6"
+                        style="@style/MainTextStyle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:buttonTint="@color/black"
+                        android:text="Bayleaf" />
+
+                    <CheckBox
+                        android:id="@+id/checkBox7"
+                        style="@style/MainTextStyle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:buttonTint="@color/black"
+                        android:text="Bayleaf" />
+
+                    <CheckBox
+                        android:id="@+id/checkBox8"
+                        style="@style/MainTextStyle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:buttonTint="@color/black"
+                        android:text="Bayleaf" />
+
+                    <CheckBox
+                        android:id="@+id/checkBox9"
+                        style="@style/MainTextStyle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:buttonTint="@color/black"
+                        android:text="Bayleaf" />
+
+                    <CheckBox
+                        android:id="@+id/checkBgox5"
+                        style="@style/MainTextStyle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:buttonTint="@color/black"
+                        android:text="Bayleaf" />
+
+                    <CheckBox
+                        android:id="@+id/as"
+                        style="@style/MainTextStyle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:buttonTint="@color/black"
+                        android:text="Bayleaf" />
+
+                    <CheckBox
+                        android:id="@+id/adsd"
+                        style="@style/MainTextStyle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:buttonTint="@color/black"
+                        android:text="Bayleaf" />
+                </LinearLayout>
 
             </LinearLayout>
 
@@ -177,9 +294,8 @@
             android:id="@+id/button"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginBottom="8dp"
-            android:text="@string/view_recipe"
             android:background="@color/dark_blue"
+            android:text="@string/view_recipe"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
