--- a/app/src/main/res/layout/recipe_fragment.xml
+++ b/app/src/main/res/layout/recipe_fragment.xml
@@ -21,10 +21,8 @@
             android:id="@+id/recipe_scroll_view"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@id/change_view_button"
+            app:layout_constraintBottom_toTopOf="@id/divider"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHeight_percent="0.9"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -288,19 +286,27 @@
 
         </ScrollView>
 
-        <Button
+        <View style="@style/Divider"
+            android:id="@+id/divider"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/change_view_button"/>
+
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/change_view_button"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:background="@color/dark_blue"
-            android:text="@string/view_recipe"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
             android:onClick="onChangeViewButtonPressed"
+            android:text="@string/view_recipe"
+            style="@style/MainButtonStyle"
+            app:elevation="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/recipe_scroll_view"
-            app:layout_constraintVertical_bias="0.0"
-            app:layout_constraintHeight_percent="0.1"/>
+            app:layout_constraintTop_toBottomOf="@id/recipe_scroll_view" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
