--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -35,6 +35,8 @@
             android:layout_margin="16dp"
             android:contentDescription="@string/add_recipe"
             android:src="@drawable/ic_add_black_48dp"
+            app:borderWidth="0dp"
+            android:backgroundTint="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
 
