add sharedElement transition animation

--- a/app/src/main/res/layout/recipe_fragment.xml
+++ b/app/src/main/res/layout/recipe_fragment.xml
@@ -9,6 +9,7 @@
             type="com.example.whatscooking.main.recipepage.RecipeViewModel" />
         <import type="android.view.View"/>
         <import type="android.net.Uri"/>
+        <import type="com.example.whatscooking.utilities.Constants"/>
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -52,7 +53,8 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        android:src="@{Uri.parse(recipe.recipeInfo.imageUri)}"/>
+                        android:src="@{recipe.recipeInfo.imageUri == null ? null : Uri.parse(recipe.recipeInfo.imageUri)}"
+                        android:transitionName="@{Constants.RECIPE_IMG_TRANSITION_ID}"/>
 
                     <TextView
                         android:id="@+id/title"
