--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -18,7 +18,7 @@
         android:background="@color/white">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recipe_recycle_view"
+            android:id="@+id/recipe_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_gravity="center"
