--- a/app/src/main/res/layout/recipe_card_view.xml
+++ b/app/src/main/res/layout/recipe_card_view.xml
@@ -18,7 +18,8 @@
         android:layout_gravity="center"
         android:layout_margin="8dp"
         card_view:cardCornerRadius="4dp"
-        card_view:cardElevation="8dp">
+        card_view:cardElevation="8dp"
+        android:transitionGroup="true">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
