--- a/app/src/main/res/layout/recipe_instructions_fragment.xml
+++ b/app/src/main/res/layout/recipe_instructions_fragment.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="16dp">
+    android:layout_gravity="center_vertical"
+    android:layout_marginTop="16dp"
+    android:gravity="center"
+    android:orientation="vertical">
 
-    <TextView
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/view_pager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Hello Beautiful \n this is a text\n an amazing text\n a text from outer space\nYes!"
-        android:gravity="center"/>
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_height="320dp"
+        android:layout_gravity="center"
+        android:background="@color/blue_white"></androidx.viewpager.widget.ViewPager>
+
+</LinearLayout>
